test/errors/type_names_error/zs/structure_name_first_lower_case_error.zs
package structure_name_first_lower_case_error;

struct firstLowerCaseNotAllowed
{};
